# playground-vibevoice-asr

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: experiment_results.md  vibevoice_asr_experiment_plan.md
src/playground_vibevoice_asr/: __init__.py  cli.py  output_schema.py  transcribe.py
